reset cmd test4

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h2>git reset command test</h2>
     <h1>new reset cmd2</h1>
     <h3>new reset cmd3</h3>
+    <h4>reset 4</h4>
 </body>
 </html>
